--- a/projects/notes-chords-scales.html
+++ b/projects/notes-chords-scales.html
@@ -21,12 +21,17 @@
 
             <div class="project-meta">
                 <span class="project-year">2023-Current</span>
-                <span class="project-categories">Software<br>React / Vite / Web MIDI</span>
+                <span class="project-categories">Software<br>Web App / AU Plugin<br>React / Vite / JUCE</span>
             </div>
         </header>
 
         <div class="project-content">
             <div class="project-text-section">
+                <p><strong>Available as:</strong></p>
+                <p>
+                    Web App — runs in browser with Web MIDI support<br>
+                    AU Plugin — runs directly in your DAW (macOS)
+                </p>
                 <p><strong>Input sources:</strong></p>
                 <p>
                     MIDI controller<br>
