Update project and education dates
- SNaPS Librarian: 2026
- Early Downhome Blues: 2026
- Pitch Class Router: 2026
- Ensemble Jammer: 2025
- Scale Awareness Bridge: 2025
- Notes Chords Scales: 2025
- Risset Rhythm: 2026
- Huron Voice Leading: 2026
- MFA Thesis: 2018
- MFA CalArts: 2018
- BA UC Santa Cruz: 2013

--- a/projects/notes-chords-scales.html
+++ b/projects/notes-chords-scales.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="project-meta">
-                <span class="project-year">2023-Current</span>
+                <span class="project-year">2025</span>
                 <span class="project-categories">Software<br>Web App / AU Plugin<br>React / Vite / JUCE</span>
             </div>
         </header>
