--- a/projects/risset.html
+++ b/projects/risset.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="project-meta">
-                <span class="project-year">2020-Current</span>
+                <span class="project-year">2026</span>
                 <span class="project-categories">Software<br>Python / Max for Live</span>
             </div>
         </header>
