--- a/music/index.html
+++ b/music/index.html
@@ -29,7 +29,7 @@
                 <p class="format">Spectral Orchestration</p>
                 <p class="desc">
                     Spectral orchestration of a droning airboat motor traversing Florida swamps.
-                    <a href="https://youtu.be/..." target="_blank">Watch</a>
+                    <a href="https://youtu.be/7IPjz7uxDMY" target="_blank">Watch</a>
                 </p>
             </div>
 
@@ -40,7 +40,7 @@
                 <p class="format">Album</p>
                 <p class="desc">
                     Procedurally generated algorithmic variations of Edward MacDowell's "To A Wild Rose."
-                    <a href="https://..." target="_blank">Listen</a>
+                    <a href="https://nathanturczan.bandcamp.com/album/to-a-wild-rose-growing-throughout-the-multiverse" target="_blank">Listen</a>
                 </p>
             </div>
 
@@ -51,7 +51,7 @@
                 <p class="format">Nature Documentary Score</p>
                 <p class="desc">
                     Original score for nature documentary.
-                    <a href="https://youtu.be/..." target="_blank">Watch</a>
+                    <a href="https://youtu.be/-DQgZVV-Dc0" target="_blank">Watch</a>
                 </p>
             </div>
         </div>
