--- a/projects/ensemble-jammer.html
+++ b/projects/ensemble-jammer.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="project-text-section">
-                <a href="#" target="_blank" class="project-link">Launch App</a>
+                <a href="https://ensemblejammer.scalenavigator.com/" target="_blank" class="project-link">Launch App</a>
             </div>
         </div>
 
