--- a/projects/wild-rose.html
+++ b/projects/wild-rose.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="project-text-section">
-                <a href="#" target="_blank" class="project-link">Listen on Bandcamp</a>
+                <a href="https://nathanturczan.bandcamp.com/album/to-a-wild-rose-growing-throughout-the-multiverse" target="_blank" class="project-link">Listen on Bandcamp</a>
             </div>
         </div>
 
