--- a/projects/snaps.html
+++ b/projects/snaps.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="project-text-section">
-                <a href="#" target="_blank" class="project-link">GitHub</a>
+                <a href="https://github.com/nhthn/snaps" target="_blank" class="project-link">GitHub</a>
             </div>
         </div>
 
