Remove long bio version - keep single bio only

--- a/index.html
+++ b/index.html
@@ -88,11 +88,8 @@
                 </button>
 
                 <p class="greeting">Nathan Turczan</p>
-                <p class="bio bio-short">
+                <p class="bio">
                     Composer, product designer, and developer building instruments for composition, improvisation, and harmonic exploration.
-                </p>
-                <p class="bio bio-long">
-                    Composer and music technologist based in Los Angeles building instruments that treat harmony as a live interactive system. His current focus Scale Navigator is harmonic middleware for composition and performance: one shared tonal context for players, plugins, and ensembles.
                 </p>
             </div>
 
