Update intro text, Ensemble Jammer category, remove old files

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- Intro text -->
         <div class="annotation annotation-intro">
-            <span class="annotation-text">Each polygon represents a scale. Turn on the audio (top left) and <span class="desktop-only">click</span><span class="mobile-only">tap</span> a polygon to change the harmony and hear the music respond in real time.</span>
+            <span class="annotation-text">Each polygon represents a scale. Turn on the audio (top left) and <span class="desktop-only">click</span><span class="mobile-only">tap</span> a polygon to change the harmony and hear the music respond in real time.<br>Build your own live textures with <a href="https://ensemblejammer.scalenavigator.com/">Ensemble Jammer</a>.</span>
         </div>
     </div>
 
@@ -127,7 +127,7 @@
                 <a href="projects/ensemble-jammer.html" class="project-item">
                     <span class="number">3</span>
                     <span class="title">Ensemble Jammer</span>
-                    <span class="category">Web App</span>
+                    <span class="category">Multiplayer Harmony</span>
                 </a>
 
                 <a href="projects/souls.html" class="project-item">
