Fix broken image paths on Dashboard and PitchSnap project pages

--- a/projects/pitchsnap.html
+++ b/projects/pitchsnap.html
@@ -27,12 +27,17 @@
 
         <div class="project-content">
             <div class="project-images">
-                <img src="../images/pitchsnap/pitchsnap-1.png" alt="PitchSnap interface" class="project-image">
+                <img src="../images/pitchsnap/Screenshot 2026-02-10 at 8.51.41 AM.png" alt="PitchSnap interface" class="project-image">
             </div>
 
             <div class="image-row">
-                <img src="../images/pitchsnap/pitchsnap-2.png" alt="PitchSnap scale view" class="project-image">
-                <img src="../images/pitchsnap/pitchsnap-3.png" alt="PitchSnap settings" class="project-image">
+                <img src="../images/pitchsnap/Screenshot 2026-02-10 at 8.51.47 AM.png" alt="PitchSnap scale view" class="project-image">
+                <img src="../images/pitchsnap/Screenshot 2026-02-10 at 8.52.08 AM.png" alt="PitchSnap settings" class="project-image">
+            </div>
+
+            <div class="image-row">
+                <img src="../images/pitchsnap/Screenshot 2026-02-10 at 8.52.32 AM.png" alt="PitchSnap detail" class="project-image">
+                <img src="../images/pitchsnap/Screenshot 2026-02-10 at 8.52.54 AM.png" alt="PitchSnap options" class="project-image">
             </div>
 
             <div class="project-text-section">
