--- a/projects/scale-navigator-dashboard.html
+++ b/projects/scale-navigator-dashboard.html
@@ -37,39 +37,32 @@
                 </p>
             </div>
 
-            <h3 style="margin: 40px 0 20px; font-size: 15px; text-transform: uppercase; letter-spacing: 0.01em;">Plugin</h3>
-
-            <div class="project-images">
-                <img src="../images/dashboard/plugin.png" alt="Scale Navigator Dashboard plugin" class="project-image">
-            </div>
-
             <h3 style="margin: 40px 0 20px; font-size: 15px; text-transform: uppercase; letter-spacing: 0.01em;">Desktop</h3>
 
             <div class="image-row">
-                <img src="../images/dashboard/desktop-1.png" alt="Dashboard desktop view" class="project-image">
-                <img src="../images/dashboard/desktop-2.png" alt="Dashboard scale selection" class="project-image">
+                <img src="../images/dashboard/desktop/Screenshot 2026-02-17 at 9.26.07 AM.png" alt="Dashboard desktop view" class="project-image">
+                <img src="../images/dashboard/desktop/Screenshot 2026-02-17 at 9.26.24 AM.png" alt="Dashboard scale selection" class="project-image">
             </div>
 
             <div class="image-row">
-                <img src="../images/dashboard/desktop-3.png" alt="Dashboard chord view" class="project-image">
-                <img src="../images/dashboard/desktop-4.png" alt="Dashboard navigation" class="project-image">
+                <img src="../images/dashboard/desktop/Screenshot 2026-02-17 at 9.26.45 AM.png" alt="Dashboard chord view" class="project-image">
+                <img src="../images/dashboard/desktop/Screenshot 2026-02-17 at 9.28.29 AM.png" alt="Dashboard navigation" class="project-image">
             </div>
 
-            <div class="project-images">
-                <img src="../images/dashboard/desktop-5.png" alt="Dashboard expanded view" class="project-image">
+            <div class="image-row">
+                <img src="../images/dashboard/desktop/Screenshot 2026-02-17 at 9.29.27 AM.png" alt="Dashboard expanded view" class="project-image">
+                <img src="../images/dashboard/desktop/Screenshot 2026-02-17 at 9.29.37 AM.png" alt="Dashboard expanded view" class="project-image">
             </div>
 
             <h3 style="margin: 40px 0 20px; font-size: 15px; text-transform: uppercase; letter-spacing: 0.01em;">Mobile</h3>
 
             <div class="image-row" style="display: flex; gap: 8px; flex-wrap: nowrap;">
-                <img src="../images/dashboard/mobile-1.jpeg" alt="Dashboard mobile view" class="project-image" style="flex: 1; min-width: 0; height: auto;">
-                <img src="../images/dashboard/mobile-2.jpeg" alt="Dashboard mobile scales" class="project-image" style="flex: 1; min-width: 0; height: auto;">
-                <img src="../images/dashboard/mobile-3.jpeg" alt="Dashboard mobile detail" class="project-image" style="flex: 1; min-width: 0; height: auto;">
-                <img src="../images/dashboard/mobile-4.jpeg" alt="Dashboard mobile navigation" class="project-image" style="flex: 1; min-width: 0; height: auto;">
-                <img src="../images/dashboard/mobile-5.jpeg" alt="Dashboard mobile chords" class="project-image" style="flex: 1; min-width: 0; height: auto;">
-                <img src="../images/dashboard/mobile-6.jpeg" alt="Dashboard mobile settings" class="project-image" style="flex: 1; min-width: 0; height: auto;">
-                <img src="../images/dashboard/mobile-7.jpeg" alt="Dashboard mobile extra" class="project-image" style="flex: 1; min-width: 0; height: auto;">
-                <img src="../images/dashboard/mobile-8.jpeg" alt="Dashboard mobile extra" class="project-image" style="flex: 1; min-width: 0; height: auto;">
+                <img src="../images/dashboard/mobile/Simulator Screenshot - iPhone 17 - 2026-02-16 at 22.19.48.png" alt="Dashboard mobile view" class="project-image" style="flex: 1; min-width: 0; height: auto;">
+                <img src="../images/dashboard/mobile/Simulator Screenshot - iPhone 17 - 2026-02-16 at 22.19.54.png" alt="Dashboard mobile scales" class="project-image" style="flex: 1; min-width: 0; height: auto;">
+                <img src="../images/dashboard/mobile/Simulator Screenshot - iPhone 17 - 2026-02-16 at 22.20.01.png" alt="Dashboard mobile detail" class="project-image" style="flex: 1; min-width: 0; height: auto;">
+                <img src="../images/dashboard/mobile/Simulator Screenshot - iPhone 17 - 2026-02-16 at 22.20.11.png" alt="Dashboard mobile navigation" class="project-image" style="flex: 1; min-width: 0; height: auto;">
+                <img src="../images/dashboard/mobile/Simulator Screenshot - iPhone 17 - 2026-02-16 at 22.20.40.png" alt="Dashboard mobile chords" class="project-image" style="flex: 1; min-width: 0; height: auto;">
+                <img src="../images/dashboard/mobile/Simulator Screenshot - iPhone 17 - 2026-02-16 at 22.20.51.png" alt="Dashboard mobile settings" class="project-image" style="flex: 1; min-width: 0; height: auto;">
             </div>
 
             <div class="project-text-section">
