Fix broken image paths on Ensemble Jammer project page

--- a/projects/ensemble-jammer.html
+++ b/projects/ensemble-jammer.html
@@ -27,22 +27,22 @@
 
         <div class="project-content">
             <div class="project-images">
-                <img src="../images/ensemblejammer/ensemblejammer-1.png" alt="Ensemble Jammer interface" class="project-image">
+                <img src="../images/ensemblejammer/Screenshot 2026-02-17 at 6.32.10 PM.png" alt="Ensemble Jammer interface" class="project-image">
             </div>
 
             <div class="image-row">
-                <img src="../images/ensemblejammer/ensemblejammer-2.png" alt="Ensemble Jammer instruments" class="project-image">
-                <img src="../images/ensemblejammer/ensemblejammer-3.png" alt="Ensemble Jammer scales" class="project-image">
+                <img src="../images/ensemblejammer/Screenshot 2026-02-17 at 6.31.53 PM.png" alt="Ensemble Jammer instruments" class="project-image">
+                <img src="../images/ensemblejammer/Screenshot 2026-02-17 at 6.32.38 PM.png" alt="Ensemble Jammer scales" class="project-image">
             </div>
 
             <div class="image-row">
-                <img src="../images/ensemblejammer/ensemblejammer-4.png" alt="Ensemble Jammer session" class="project-image">
-                <img src="../images/ensemblejammer/ensemblejammer-5.png" alt="Ensemble Jammer detail" class="project-image">
+                <img src="../images/ensemblejammer/Screenshot 2026-02-17 at 6.33.04 PM.png" alt="Ensemble Jammer session" class="project-image">
+                <img src="../images/ensemblejammer/Screenshot 2026-02-17 at 6.33.12 PM.png" alt="Ensemble Jammer detail" class="project-image">
             </div>
 
             <div class="image-row">
-                <img src="../images/ensemblejammer/ensemblejammer-6.png" alt="Ensemble Jammer view" class="project-image">
-                <img src="../images/ensemblejammer/ensemblejammer-7.png" alt="Ensemble Jammer settings" class="project-image">
+                <img src="../images/ensemblejammer/Screenshot 2026-02-17 at 6.33.20 PM.png" alt="Ensemble Jammer view" class="project-image">
+                <img src="../images/ensemblejammer/Screenshot 2026-02-17 at 6.33.44 PM.png" alt="Ensemble Jammer settings" class="project-image">
             </div>
 
             <div class="project-text-section">
