--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QZDPQB8062"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-QZDPQB8062');
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nathan Turczan</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
